# md-to-incodoc

./: .gitignore  Cargo.toml  LICENSE  README.md  outp
src/: bin.rs  lib.rs  tests.rs
