[package]
name = "md-to-incodoc"
version = "0.3.2"
edition = "2024"
authors = ["Cody Bloemhard <codybloemhard@gmail.com>"]
description = "Convert markdown to incodoc."
license = "MIT"
readme = "README.md"
repository = "https://github.com/codybloemhard/md-to-incodoc"
keywords = ["incorporeal", "incodoc", "markdown", "convert"]
categories = ["accessibility", "parser-implementations"]

[[bin]]
name = "testbin"
path = "src/bin.rs"

[dependencies]
incodoc = "0.7.0"
# incodoc = { path = "../incodoc" }
pulldown-cmark = "0.13.0"
